# backend/routes/product_route.go
@@ -16,11 +16,11 @@ func SetupProductRoutes(router *gin.Engine, db *gorm.DB) {
 	// Groupe de routes pour les produits
 	productRoutes := router.Group("/api/products")
 	{
-		productRoutes.POST("", middlewares.AuthMiddleware(), middlewares.AdminOnly(), productController.CreateProduct)
+		productRoutes.POST("", middlewares.AuthMiddleware(), middlewares.RequireRole("admin"), productController.CreateProduct)
 		productRoutes.GET("", middlewares.AuthMiddleware(), productController.GetAllProducts)
 		productRoutes.GET("/:id", middlewares.AuthMiddleware(), productController.GetProduct)
 		productRoutes.PUT("/:id", middlewares.AuthMiddleware(), productController.UpdateProduct)
-		productRoutes.DELETE("/:id", middlewares.AuthMiddleware(), middlewares.AdminOnly(), productController.DeleteProduct)
+		productRoutes.DELETE("/:id", middlewares.AuthMiddleware(), middlewares.RequireRole("admin"), productController.DeleteProduct)
 		productRoutes.DELETE("/softdelete/:id", middlewares.AuthMiddleware(), productController.SoftDeleteProduct)
 	}
 }
